dke-service/luna-key-broker.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: luna-key-broker-for-dke
  name: luna-key-broker-for-dke
spec:
  replicas: 2
  selector:
    matchLabels:
      app: luna-key-broker-for-dke
  strategy: {}
  template:
    metadata:
      labels:
        app: luna-key-broker-for-dke
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - image: YOUR_ACR_RESOURCE.azurecr.io/luna-key-broker-for-dke:v1.1
          name: luna-key-broker-for-dke
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: luna-config
              mountPath: /usr/safenet/lunaclient/config/
            - name: rego-file
              mountPath: /usr/safenet/lunaclient/rego/
      volumes:
        - name: luna-config
          secret:
            secretName: luna-config-file
        - name: rego-file
          secret:
            secretName: auth-claim

---
apiVersion: v1
kind: Service
metadata:
  name: luna-key-broker-for-dke
spec:
  type: NodePort
  selector:
    app: luna-key-broker-for-dke
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
