dke-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luna-key-broker-for-dke-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - YOUR_DKE_SERVICE_FQDN
    secretName: tls-secret-v1
  rules:
  - host: YOUR_DKE_SERVICE_FQDN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: luna-key-broker-for-dke
            port:
              number: 5000
